--- a/proyecto-fin-grado/src/main/resources/templates/registro.html
+++ b/proyecto-fin-grado/src/main/resources/templates/registro.html
@@ -33,6 +33,12 @@
             <div class="card-header">
                 <h2 class="text-center">Registro de nuevo usuario</h2>
             </div>
+            <div th:if="${param.success}">
+                <div class="alert alert-info">
+                    ¡Has sido registrado/registrada en la aplicación!
+                </div>
+
+            </div>
             <div class="card-body">
                 <form
                       method="post"
