--- a/proyecto-fin-grado/src/main/resources/templates/registro.html
+++ b/proyecto-fin-grado/src/main/resources/templates/registro.html
@@ -43,7 +43,7 @@
                 <form
                       method="post"
                       role="form"
-                      th:action="@{/register/save}"
+                      th:action="@{/registro/guardar}"
                       th:object="${usuario}"
                       >
                     <div class="form-group mb-3">
