--- a/proyecto-fin-grado/src/main/resources/templates/registro.html
+++ b/proyecto-fin-grado/src/main/resources/templates/registro.html
@@ -56,6 +56,8 @@
                                 th:field="*{firstName}"
                                 type="text"
                         />
+                        <p th:errors = "*{firstName}" class="text-danger"
+                           th:if="${#fields.hasErrors('firstName')}"></p>
                     </div>
                     <div class="form-group mb-3">
                         <label class="form-label">Apellido</label>
@@ -67,6 +69,8 @@
                                 th:field="*{lastName}"
                                 type="text"
                         />
+                        <p th:errors = "*{lastName}" class="text-danger"
+                           th:if="${#fields.hasErrors('lastName')}"></p>
                     </div>
                     <div class="form-group mb-3">
                         <label class="form-label">Email</label>
@@ -78,6 +82,8 @@
                                 th:field="*{email}"
                                 type="email"
                         />
+                        <p th:errors = "*{email}" class="text-danger"
+                           th:if="${#fields.hasErrors('email')}"></p>
                     </div>
                     <div class="form-group mb-3">
                         <label class="form-label">Contraseña</label>
@@ -89,6 +95,8 @@
                                 th:field="*{password}"
                                 type="password"
                         />
+                        <p th:errors = "*{password}" class="text-danger"
+                           th:if="${#fields.hasErrors('password')}"></p>
                     </div>
                     <div class="form-group">
                        <button class="btn btn-primary" type="submit">Registrarse</button>
