--- a/proyecto-fin-grado/src/main/resources/templates/registro.html
+++ b/proyecto-fin-grado/src/main/resources/templates/registro.html
@@ -44,7 +44,7 @@
                       method="post"
                       role="form"
                       th:action="@{/registro/guardar}"
-                      th:object="${usuario}"
+                      th:object="${user}"
                       >
                     <div class="form-group mb-3">
                         <label class="form-label">Nombre</label>
