--- a/proyecto-fin-grado/src/main/resources/templates/index.html
+++ b/proyecto-fin-grado/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@ xmlns:th="http://www.thymeleaf.org"
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
-</head>
+</head><nav class="navbar navbar-light" style="background-color: #006400;">
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
@@ -23,6 +23,7 @@ xmlns:th="http://www.thymeleaf.org"
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" th:href="@{/registro}">Registro</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/menu}">Menu</a>
                 </li>
             </ul>
         </div>
