--- a/proyecto-fin-grado/src/main/resources/templates/login.html
+++ b/proyecto-fin-grado/src/main/resources/templates/login.html
@@ -14,13 +14,14 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" th:href="@{/index}">Registration and Login System</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/register}">Register</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/registro}">Registro</a>
                 </li>
             </ul>
         </div>
@@ -72,8 +73,8 @@
                         </div>
                         <div class="form-group mb-3">
                             <button type="submit" class="btn btn-primary" >Enviar</button>
-                            <span> Not registered ?
-                                <a th:href="@{/registro}">Register/Signup here</a>
+                            <span> ¿No estás registrado?
+                                <a th:href="@{/registro}">Regístrate aquí</a>
                             </span>
                         </div>
                     </form>
