--- a/proyecto-fin-grado/src/main/resources/templates/crear_paciente.html
+++ b/proyecto-fin-grado/src/main/resources/templates/crear_paciente.html
@@ -7,6 +7,7 @@
         rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
         crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="estilos.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -138,14 +139,13 @@
               <select class="form-select" id="pais" name="pais" th:field="*{pais}">
                 <option value="España">España</option>
                 <option value="Estados Unidos">Estados Unidos</option>
-                <!-- Agrega más opciones según necesites -->
               </select>
               <p th:if="${#fields.hasErrors('pais')}" class="text-danger"
                  th:errors="*{pais}"></p>
             </div>
           </div>
         </div>
-        <button class="btn btn-primary" type="submit">Submit</button>
+        <button class="btn btn-primary" type="submit">Enviar</button>
       </form>
     </div>
   </div>
