--- a/proyecto-fin-grado/src/main/resources/templates/registro.html
+++ b/proyecto-fin-grado/src/main/resources/templates/registro.html
@@ -9,6 +9,8 @@
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="estilos.css">
+
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
