--- a/proyecto-fin-grado/src/main/resources/templates/crear_paciente.html
+++ b/proyecto-fin-grado/src/main/resources/templates/crear_paciente.html
@@ -37,111 +37,63 @@
       <h2 class="text-center"> Crear Paciente</h2>
     </div>
     <div class="card-body">
-      <form
-              method="post"
-              role="form"
-              th:action="@{/pacientes}"
-              th:object="${paciente}"
-      >
+      <form method="post" role="form" th:action="@{/pacientes}" th:object="${paciente}">
         <div class="row">
           <div class="col">
             <div class="form-group mb-3">
               <label class="form-label">Nombre del Paciente</label>
-              <input
-                      class="form-control"
-                      id="nombre"
-                      name="nombre"
-                      placeholder="Nombre"
-                      type="text"
-                      th:field="*{nombre}"
-              />
-              <p th:if="${#fields.hasErrors('nombre')}" class="text-danger"
-                 th:errors="*{nombre}"></p>
+              <input class="form-control" id="nombre" name="nombre" placeholder="Nombre" type="text" th:field="*{nombre}" />
+              <p th:if="${#fields.hasErrors('nombre')}" class="text-danger" th:errors="*{nombre}"></p>
             </div>
+
             <div class="form-group mb-3">
               <label class="form-label">Apellidos del Paciente</label>
-              <input
-                      class="form-control"
-                      id="apellidos"
-                      name="apellidos"
-                      placeholder="Apellidos"
-                      type="text"
-                      th:field="*{apellidos}"
-              />
-              <p th:if="${#fields.hasErrors('apellidos')}" class="text-danger"
-                 th:errors="*{apellidos}"></p>
+              <input class="form-control" id="apellidos" name="apellidos" placeholder="Apellidos" type="text" th:field="*{apellidos}" />
+              <p th:if="${#fields.hasErrors('apellidos')}" class="text-danger" th:errors="*{apellidos}"></p>
             </div>
-            <div class="form-group mb-3">
-              <label class="form-label">Fecha de Nacimiento</label>
-              <input
-                      class="form-control"
-                      id="fechaNacimiento"
-                      name="fechaNacimiento"
-                      placeholder="Fecha de Nacimiento"
-                      type="date"
-                      th:field="*{fechaNacimiento}"
-              />
-              <p th:if="${#fields.hasErrors('fechaNacimiento')}" class="text-danger"
-                 th:errors="*{fechaNacimiento}"></p>
-            </div>
+
             <div class="form-group mb-3">
               <label class="form-label">Edad</label>
-              <input
-                      class="form-control"
-                      id="edad"
-                      name="edad"
-                      placeholder="Edad"
-                      type="number"
-                      th:field="*{edad}"
-              />
-              <p th:if="${#fields.hasErrors('edad')}" class="text-danger"
-                 th:errors="*{edad}"></p>
+              <input class="form-control" id="edad" name="edad" placeholder="Edad" type="number" th:field="*{edad}" />
+              <p th:if="${#fields.hasErrors('edad')}" class="text-danger" th:errors="*{edad}"></p>
+            </div>
+
+            <div class="form-group mb-3">
+              <label class="form-label">Fecha de Nacimiento</label>
+              <input class="form-control" id="fechaNacimiento" name="fechaNacimiento" placeholder="Fecha de Nacimiento" type="date" th:field="*{fechaNacimiento}" />
+              <p th:if="${#fields.hasErrors('fechaNacimiento')}" class="text-danger" th:errors="*{fechaNacimiento}"></p>
             </div>
           </div>
+
           <div class="col">
             <div class="form-group mb-3">
               <label class="form-label">Peso</label>
-              <input
-                      class="form-control"
-                      id="peso"
-                      name="peso"
-                      placeholder="peso"
-                      type="number"
-                      th:field="*{peso}"
-              />
-              <p th:if="${#fields.hasErrors('peso')}" class="text-danger"
-                 th:errors="*{peso}"></p>
+              <input class="form-control" id="peso" name="peso" placeholder="Peso" type="number" th:field="*{peso}" />
+              <p th:if="${#fields.hasErrors('peso')}" class="text-danger" th:errors="*{peso}"></p>
             </div>
+
             <div class="form-group mb-3">
               <label class="form-label">Altura</label>
-              <input
-                      class="form-control"
-                      id="altura"
-                      name="altura"
-                      placeholder="altura"
-                      type="number"
-                      th:field="*{altura}"
-              />
-              <p th:if="${#fields.hasErrors('altura')}" class="text-danger"
-                 th:errors="*{altura}"></p>
+              <input class="form-control" id="altura" name="altura" placeholder="Altura" type="number" th:field="*{altura}" />
+              <p th:if="${#fields.hasErrors('altura')}" class="text-danger" th:errors="*{altura}"></p>
             </div>
+
             <div class="form-group mb-3">
               <label class="form-label">Sexo</label>
               <select class="form-select" id="sexo" name="sexo" th:field="*{sexo}">
                 <option value="Masculino">Masculino</option>
                 <option value="Femenino">Femenino</option>
               </select>
-              <p th:if="${#fields.hasErrors('sexo')}" class="text-danger"
-                 th:errors="*{sexo}"></p>
+              <p th:if="${#fields.hasErrors('sexo')}" class="text-danger" th:errors="*{sexo}"></p>
             </div>
+
             <div class="form-group mb-3">
               <label class="form-label">País</label>
               <select class="form-select" id="pais" name="pais" th:field="*{pais}">
                 <option value="España">España</option>
                 <option value="Estados Unidos">Estados Unidos</option>
               </select>
-              <p th:if="${#fields.hasErrors('pais')}" class="text-danger"
-                 th:errors="*{pais}"></p>
+              <p th:if="${#fields.hasErrors('pais')}" class="text-danger" th:errors="*{pais}"></p>
             </div>
           </div>
         </div>
@@ -150,5 +102,3 @@
     </div>
   </div>
 </div>
-</body>
-</html>
