--- a/proyecto-fin-grado/src/main/resources/templates/pacientes.html
+++ b/proyecto-fin-grado/src/main/resources/templates/pacientes.html
@@ -4,24 +4,48 @@
 >
 <head>
     <meta charset="UTF-8">
-    <title>Lista de pacientes</title>
-
+    <title>Registration and Login System</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+          crossorigin="anonymous">
 </head>
+<link rel="stylesheet" type="text/css" href="estilos.css">
 <body>
-<table class="table table-striped table-hover table-bordered" border="1">
-    <thead class="table-dark">
-    <tr>
-        <th>Nombre</th>
-        <th>Apellidos</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="paciente : ${pacientes}">
-        <td th:text="${paciente.nombre}"></td>
-        <td th:text="${paciente.apellidos}"></td>
-    </tr>
-    </tbody>
-</table>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" th:href="@{/index}">Aplicacion Sanitaria</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" th:href="@{/logout}">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class="container">
+    <div class="row col-md-10">
+        <h2>Listado de Pacientes</h2>
+    </div>
+    <table class="table table-bordered table-hover">
+        <thead class="table-dark">
+        <tr>
+            <th>Nombre</th>
+            <th>Apellidos</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="paciente : ${pacientes}">
+            <td th:text="${paciente.nombre}"></td>
+            <td th:text="${paciente.apellidos}"></td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 </body>
 </html>
