FUNCIONA: falla fechananicimiento

--- a/proyecto-fin-grado/src/main/resources/templates/menu.html
+++ b/proyecto-fin-grado/src/main/resources/templates/menu.html
@@ -60,7 +60,7 @@
     <div class="row justify-content-center">
         <!-- Primera fila de botones -->
         <div class="col-lg-2 col-md-4 col-sm-6">
-            <a href="submenu1.html" class="menu-button bg-white text-dark d-flex justify-content-center align-items-center">
+            <a href="@{/pacientes}" class="menu-button bg-white text-dark d-flex justify-content-center align-items-center">
                 <img src="imagen1.jpg" alt="Imagen 1">
             </a>
             <div class="menu-text">Visualización de pacientes</div>
@@ -79,19 +79,21 @@
         </div>
     </div>
     <div class="row justify-content-center">
+
+
         <!-- Segunda fila de botones -->
 
         <div class="col-lg-2 col-md-4 col-sm-6">
-            <a th:href="@{/pacientes/crear}" class="menu-button bg-white text-dark d-flex justify-content-center align-items-center">
-                <img src="imagen4.jpg" alt="Imagen 4">
+            <a th:href="@{/pacientes}" class="menu-button bg-white text-dark d-flex justify-content-center align-items-center">
+                <img src="imagen4.png" alt="Imagen 4">
             </a>
-            <div class="menu-text">Añadir enfermedad</div>
+            <div class="menu-text">Lista de pacientes</div>
         </div>
         <div class="col-lg-2 col-md-4 col-sm-6">
             <a href="submenu5.html" class="menu-button bg-white text-dark d-flex justify-content-center align-items-center">
                 <img src="imagen5.jpg" alt="Imagen 5">
             </a>
-            <div class="menu-text">no se</div>
+            <div class="menu-text">Añadir enfermedad</div>
         </div>
         <div class="col-lg-2 col-md-4 col-sm-6">
             <a href="submenu6.html" class="menu-button bg-white text-dark d-flex justify-content-center align-items-center">
