--- a/proyecto-fin-grado/src/main/resources/templates/crear_paciente.html
+++ b/proyecto-fin-grado/src/main/resources/templates/crear_paciente.html
@@ -7,7 +7,7 @@
         rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
         crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="estilos.css">
+  <link rel="stylesheet" type="text/css" href="../static/estilos.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
