--- a/proyecto-fin-grado/src/main/resources/templates/pacientes.html
+++ b/proyecto-fin-grado/src/main/resources/templates/pacientes.html
@@ -4,30 +4,38 @@
 >
 <head>
     <meta charset="UTF-8">
-    <title>Registration and Login System</title>
+    <title>Aplicacion Sanitaria</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
 </head>
-<link rel="stylesheet" type="text/css" href="estilos.css">
+<link rel="stylesheet" type="text/css" href="../static/estilos.css">
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/index}">Aplicacion Sanitaria</a>
+        <!-- Botón de menú a la izquierda -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+
+        <!-- Items de la barra de navegación -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/logout}">Logout</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/menu}">Menu</a>
                 </li>
             </ul>
         </div>
+
+        <!-- Botón de login al fondo a la derecha -->
+        <div class="d-flex justify-content-end">
+            <a class="nav-link active" aria-current="page" th:href="@{/logout}">Logout</a>
+        </div>
     </div>
 </nav>
+
 <div class="container">
     <div class="row col-md-10">
         <h2>Listado de Pacientes</h2>
