--- a/proyecto-fin-grado/src/main/resources/templates/pacientes.html
+++ b/proyecto-fin-grado/src/main/resources/templates/pacientes.html
@@ -45,12 +45,18 @@
         <tr>
             <th>Nombre</th>
             <th>Apellidos</th>
+            <th>Acciones</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="paciente : ${pacientes}">
             <td th:text="${paciente.nombre}"></td>
             <td th:text="${paciente.apellidos}"></td>
+            <td>
+                <!-- De la lista que vemos, coger ese id de paciente y nos lo llevamos al endpoint de actualizar -->
+                <a class="btn btn-primary" th:href="@{/pacientes/{idPaciente}/actualizar(idPaciente=${paciente.id})}">
+                    Actualizar Informacion</a>
+            </td>
         </tr>
         </tbody>
     </table>
