--- a/proyecto-fin-grado/src/main/resources/templates/ver_paciente.html
+++ b/proyecto-fin-grado/src/main/resources/templates/ver_paciente.html
@@ -36,7 +36,7 @@
     <div class="col-md-8 offset-md-2">
       <div class="card">
         <div class="card-header">
-          <h2 class="text-center">Student Details</h2>
+          <h2 class="text-center">Informacion del paciente</h2>
         </div>
         <div class="card-body">
           <p> Nombre: <strong th:text="${paciente.nombre}"></strong></p>
