--- a/proyecto-fin-grado/src/main/resources/templates/pacientes.html
+++ b/proyecto-fin-grado/src/main/resources/templates/pacientes.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org"
->
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Aplicacion Sanitaria</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-          rel="stylesheet"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
 </head>
 <link rel="stylesheet" type="text/css" href="../static/estilos.css">
+
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <!-- Botón de menú a la izquierda -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <!-- Items de la barra de navegación -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
@@ -29,7 +27,6 @@
             </ul>
         </div>
 
-        <!-- Botón de login al fondo a la derecha -->
         <div class="d-flex justify-content-end">
             <a class="nav-link active" aria-current="page" th:href="@{/logout}">Logout</a>
         </div>
@@ -49,22 +46,41 @@
         </tr>
         </thead>
         <tbody>
-        <!-- objeto del que  puedo ir cogiendo variables (paciente. .... en este html -->
         <tr th:each="paciente : ${pacientes}">
             <td th:text="${paciente.nombre}"></td>
             <td th:text="${paciente.apellidos}"></td>
             <td>
-                <!-- De la lista que vemos, coger ese id de paciente y nos lo llevamos al endpoint de actualizar -->
-                <a class="btn btn-success" th:href="@{/pacientes/{idPaciente}/ver(idPaciente=${paciente.id})}">
-                    Ver Paciente</a>
-                <a class="btn btn-primary" th:href="@{/pacientes/{idPaciente}/actualizar(idPaciente=${paciente.id})}">
-                    Actualizar Informacion</a>
-                <a class="btn btn-danger" th:href="@{/pacientes/{idPaciente}/borrar(idPaciente=${paciente.id})}">
-                    Borrar Paciente</a>
+                <a class="btn btn-success"
+                   th:href="@{/pacientes/{idPaciente}/ver(idPaciente=${paciente.id})}">Ver Paciente</a>
+                <a class="btn btn-primary"
+                   th:href="@{/pacientes/{idPaciente}/actualizar(idPaciente=${paciente.id})}">Actualizar
+                    Informacion</a>
+                <a class="btn btn-danger"
+                   th:href="@{/pacientes/{idPaciente}/borrar(idPaciente=${paciente.id})}">Borrar
+                    Paciente</a>
+            </td>
+
+            <td colspan="3">
+                <table class="table table-bordered">
+                    <thead class="table-info">
+                    <tr>
+                        <th>Enfermedad</th>
+                        <th>Fecha de Inicio de Síntomas</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="expedienteClinico : ${paciente.expedienteClinicoList}">
+                        <td th:text="${expedienteClinico.enfermedad.nombre}"></td>
+                        <td th:text="${expedienteClinico.fechaInicioSintomas}"></td>
+                    </tr>
+                    </tbody>
+                </table>
             </td>
         </tr>
         </tbody>
+
     </table>
 </div>
 </body>
+
 </html>
