FUNCIONA: funciones de expediente

--- a/proyecto-fin-grado/src/main/resources/templates/menu.html
+++ b/proyecto-fin-grado/src/main/resources/templates/menu.html
@@ -85,19 +85,19 @@
 
         <div class="col-lg-2 col-md-4 col-sm-6">
             <a th:href="@{/pacientes}" class="menu-button bg-white text-dark d-flex justify-content-center align-items-center">
-                <img src="imagen4.png" alt="Imagen 4">
+                <img src="../static/imagen4.png" alt="Imagen 4">
             </a>
             <div class="menu-text">Lista de pacientes</div>
         </div>
         <div class="col-lg-2 col-md-4 col-sm-6">
-            <a th:href="submenu5.html" class="menu-button bg-white text-dark d-flex justify-content-center align-items-center">
+            <a th:href="@{/pacientes/idPaciente/ver}" class="menu-button bg-white text-dark d-flex justify-content-center align-items-center">
                 <img src="imagen5.jpg" alt="Imagen 5">
             </a>
-            <div class="menu-text">Añadir enfermedad</div>
+            <div class="menu-text">Mi perfil</div>
         </div>
         <div class="col-lg-2 col-md-4 col-sm-6">
             <a th:href="@{/pacientes/idPaciente/expedientes}" class="menu-button bg-white text-dark d-flex justify-content-center align-items-center">
-                <img src="imagen6.jpg" alt="Imagen 6">
+                <img src="https://static.vecteezy.com/system/resources/previews/006/216/566/non_2x/a-flat-icon-of-graphical-representation-vector.jpg" alt="Imagen 6">
             </a>
             <div class="menu-text">Visualizar gráficas actuales</div>
         </div>
