--- a/proyecto-fin-grado/src/main/resources/templates/pacientes.html
+++ b/proyecto-fin-grado/src/main/resources/templates/pacientes.html
@@ -8,7 +8,6 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
 </head>
-<link rel="stylesheet" type="text/css" href="../static/estilos.css">
 
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -43,6 +42,7 @@
             <th>Nombre</th>
             <th>Apellidos</th>
             <th>Acciones</th>
+            <th>Registro de Enfermedades</th>
         </tr>
         </thead>
         <tbody>
@@ -66,12 +66,24 @@
                     <tr>
                         <th>Enfermedad</th>
                         <th>Fecha de Inicio de Síntomas</th>
+                        <th>Estado SEIRD</th>
+                        <th>Acciones</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr th:each="expedienteClinico : ${paciente.expedienteClinicoList}">
                         <td th:text="${expedienteClinico.enfermedad.nombre}"></td>
                         <td th:text="${expedienteClinico.fechaInicioSintomas}"></td>
+                        <!-- Primera fila de botones    <td>
+                            <a class="btn btn-success"
+                               th:href="@{/expedientes/{idExpediente}/ver(idExpediente=${expediente.idExpediente})}">Ver Expediente</a>
+                            <a class="btn btn-primary"
+                               th:href="@{/expedientes/{idExpediente}/actualizar(idExpediente=${expediente.idExpediente})}">Actualizar
+                                Expediente</a>
+                            <a class="btn btn-danger"
+                               th:href="@{/expedientes/{idExpediente}/borrar(idExpediente=${expediente.idExpediente})}">Borrar
+                                Expediente</a>
+                        </td> -->
                     </tr>
                     </tbody>
                 </table>
