FUNCIONA: arreglada relacion enfermedades y expediente

--- a/proyecto-fin-grado/src/main/resources/templates/expediente_ver.html
+++ b/proyecto-fin-grado/src/main/resources/templates/expediente_ver.html
@@ -31,7 +31,7 @@
                     <h2 class="text-center">Información de la Enfermedad</h2>
                 </div>
                 <div class="card-body">
-                    <p> Paciente: <strong th:text="${expediente.idPaciente.nombre}"></strong></p>
+                    <p> Paciente: <strong th:text="${expediente.paciente.nombre}"></strong></p>
                     <p> Enfermedad: <strong th:text="${expediente.enfermedad.nombre}"></strong></p>
                     <p> Día de comienzo de síntomas: <strong th:text="${expediente.fechaInicioSintomas}"></strong></p>
                 </div>
