--- a/proyecto-fin-grado/src/main/resources/templates/menu.html
+++ b/proyecto-fin-grado/src/main/resources/templates/menu.html
@@ -61,7 +61,7 @@
         <!-- Primera fila de botones -->
         <div class="col-lg-2 col-md-4 col-sm-6">
             <a th:href="@{/pacientes}"  class="menu-button bg-white text-dark d-flex justify-content-center align-items-center">
-                <img src="imagen1.jpg" alt="Imagen 1">
+                <img src="https://img.freepik.com/vector-premium/papel-registro-pacientes-hospitalarios-concepto-lista-verificacion-medica-ilustracion-vectorial-plana_582267-1138.jpg" alt="Imagen 1">
             </a>
             <div class="menu-text">Visualización de pacientes</div>
         </div>
@@ -89,9 +89,9 @@
             </a>
             <div class="menu-text">Lista de pacientes</div>
         </div>
-        <div class="col-lg-2 col-md-4 col-sm-6">
-            <a th:href="@{/pacientes/idPaciente/ver}" class="menu-button bg-white text-dark d-flex justify-content-center align-items-center">
-                <img src="imagen5.jpg" alt="Imagen 5">
+        <div class="col-lg-2 col-md-4 col-sm-6">   <!-- Está puesto un "1" de prueba para mi perfil cambiar esto por id del usuario relacionado con el paciente -->
+            <a th:href="@{/pacientes/1/ver}" class="menu-button bg-white text-dark d-flex justify-content-center align-items-center">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQrLJikHHr2xE1uFpvYwN77rW_P-GtX3BV1XQ&usqp=CAU" alt="Imagen 5">
             </a>
             <div class="menu-text">Mi perfil</div>
         </div>
