--- a/proyecto-fin-grado/src/main/resources/templates/expediente_actualizar.html
+++ b/proyecto-fin-grado/src/main/resources/templates/expediente_actualizar.html
@@ -38,7 +38,7 @@
                 th:object="${expediente}">
             <div class="form-group mb-3">
               <label class="form-label">Paciente</label>
-              <input class="form-control" type="text" th:value="${expediente.idPaciente.nombre}" readonly/>
+              <input class="form-control" type="text" th:value="${expediente.paciente.nombre}" readonly/>
             </div>
             <!-- Utilizando Select2 para el campo de enfermedad -->
             <div class="form-group mb-3">
