--- a/proyecto-fin-grado/src/main/resources/templates/menu.html
+++ b/proyecto-fin-grado/src/main/resources/templates/menu.html
@@ -101,6 +101,12 @@
             </a>
             <div class="menu-text">Visualizar gráficas actuales</div>
         </div>
+        <div class="col-lg-2 col-md-4 col-sm-6">
+            <a th:href="@{/enfermedades}" class="menu-button bg-white text-dark d-flex justify-content-center align-items-center">
+                <img src="" alt="Imagen 6">
+            </a>
+            <div class="menu-text">Glosario de Enfermedades</div>
+        </div>
     </div>
 </div>
 </body>
