--- a/proyecto-fin-grado/src/main/resources/templates/pacientes.html
+++ b/proyecto-fin-grado/src/main/resources/templates/pacientes.html
@@ -83,6 +83,8 @@
                                th:href="@{/expedientes/{idExpediente}/actualizar(idExpediente=${expedienteClinico.id})}">Actualizar</a>
                             <a class="btn btn-danger btn-sm"
                                th:href="@{/expedientes/{idExpediente}/borrar(idExpediente=${expedienteClinico.id})}">Borrar</a>
+                            <a class="btn btn-warning btn-sm"
+                               th:href="@{/expedientes/{idExpediente}/aceptar(idExpediente=${expedienteClinico.id})}">Añadir registro a datos globales</a>
                         </td>
                     </tr>
                     </tbody>
