FUNCIONA: mejorado ver paciente

--- a/proyecto-fin-grado/src/main/resources/templates/menu.html
+++ b/proyecto-fin-grado/src/main/resources/templates/menu.html
@@ -13,7 +13,7 @@
     <style>
         /* Estilo personalizado */
         body {
-            background-color: #8B0000; /* Rojo oscuro */
+            background-color: #98BB66; /* Verde */
             color: #fff; /* Texto blanco */
         }
 
@@ -53,8 +53,9 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
         <!-- Título -->
+        <br>
         <div class="col-12">
-            <h1 class="title-text">MI APLICACION</h1>
+            <h1 class="title-text">Aplicacion Sanitaria</h1>
         </div>
     </div>
     <div class="row justify-content-center">
